# OdisseyC

./: README.md
Backbone/AVLTree/: AVLTree.cpp  AVLTree.h  CMakeLists.txt  main.cpp
Backbone/DataStructs/: DataStructures.h  DataStructures.tpp
Backbone/GeneticGuesser/: CMakeLists.txt  GenG.cpp  GenG.h  Random.cpp  Random.h  main.cpp
Backbone/HashFunct/: HashClass.h
Backbone/UserManager/: CMakeLists.txt  DataBaseManager.cpp  DataBaseManager.h  UserManager.cpp  UserManager.h  main.cpp
Backbone/UserManager/AlphabeticTree/: AlphaTree.cpp  AlphaTree.h  CMakeLists.txt  main.cpp
Backbone/UserManager/BTree/: BTree.cpp  BTree.h
Backbone/UserManager/DataManager/: CMakeLists.txt  JSONManager.cpp  JSONManager.h  main.cpp
Backbone/UserManager/DataStructs/: DataStructures.cpp  DataStructures.h
Backbone/UserManager/GenericServer/: CMakeLists.txt  Test.txt  main.cpp  mainServer.cpp  mainServer.h
Backbone/UserManager/XMLManager/: CMakeLists.txt  XMLManager.cpp  XMLManager.h  example.xml  main.cpp
Backbone/UserManager/html/: DataBaseManager_8h_source.html  annotated.html  classDataBaseManager-members.html  classDataBaseManager.html  classes.html  files.html
Backbone/UserManager/html/search/: classes_0.js
Backbone/UserManager/latex/: annotated.tex  classDataBaseManager.tex  refman.tex
Backbone/XMLManager/: CMakeLists.txt  example.xml  main.cpp  struct.dtd
